Alway display verical scrollbar to prevent layout shift.

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,3 +5,7 @@
 html {
   height: 100%;
 }
+
+body {
+  overflow-y: scroll;
+}
